refactor accrual.GetOrder method in goa design
